tests/sumo/errors/routes/emptyroute_oldstyle_plainemission/errors.sumo
Error: Attribute 'edges' in definition of route '0' is empty.
Error: Route '0' has no edges.
Quitting (on error).
